--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 [profile.dev]
 panic = "abort" # disable stack unwinding on panic
 incremental = false
+opt-level = 3
 
 # the profile used for `cargo build --release`
 [profile.release]
 panic = "abort" # disable stack unwinding on panic
 
-[dependencies]
